--- a/index.html
+++ b/index.html
@@ -11,21 +11,39 @@
 **Title**
 Careers in the Creative Arts
 
+<div class="intro">
+  <p>
+  <div><!--end. intro -->
+  <div class="date">
+    <h3>Workshop Date</h3>
+    <p>Friday, June 14, 2014</p>
+  </div><!-- end .date -->
+  
+    <div class="location">
+     <h3>Workshop location</h3>
+    <p>
+    Borough of Manhattan Community College</br>
+    Richard Harris Terrace<br>
+    199 Chambers Street<br>
+    New York, NY 10007
+    </p>
+  </div><!-- end .location -->
+  
+  
+</div>
+
 **Introductory Text**
 Careers in the Creative Arts is a one day event at BMCC that will give you direct insight into what it takes to be a creative professional from the creatives themselves. Come for free and learn how to make a living at what you love.
 
-**Date**
-Friday, June 14, 2014
 
-**Location**
-Borough of Manhattan Community College
-Richard Harris Terrace
-199 Chambers Street
-New York, NY 10007
 
 **Featured Speakers - Which speakers are up to you. include at least the name and a picture. Pictures are located in the speakers folder**
 
 **Workshop Tracks**
+
+
+
+
 Creative Writing
 Whether you write novels, plays, poems, short stories, fiction or non-fiction this is the place for you.
 
